# named-queue

./: Cargo.toml  README.md  plan.md
docs/superpowers/specs/: 2026-07-24-broadcasting-queues-design.md
src/: broadcast.rs  bus.rs  channel.rs  error.rs  lib.rs  receiver.rs  registry.rs  sender.rs
tests/: async_api.rs  broadcast.rs  create.rs  drain.rs  errors.rs  send_recv.rs  shutdown.rs  state.rs
