[package]
name = "named_queue"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Named, typed, bounded work-sharing queues over flume with graceful shutdown"
license = "Apache-2.0"
repository = "https://github.com/wushilin/named-queue"
readme = "README.md"
keywords = ["queue", "mpmc", "flume", "typed", "registry"]
categories = ["concurrency", "data-structures", "asynchronous"]

[dependencies]
flume = "0.11"
arc-swap = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
